[gd_scene load_steps=3 format=3 uid="uid://lf3o536cii6d"]

[ext_resource type="Script" uid="uid://c0bqxw2q30753" path="res://scripts/tilestrip.gd" id="1_ils0q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3aqj5"]
size = Vector2(60, 8)

[node name="tilestrip" type="Node2D"]
z_index = -1
z_as_relative = false
script = ExtResource("1_ils0q")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -4.0
offset_right = 30.0
offset_bottom = 4.0

[node name="safezone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="safezone"]
shape = SubResource("RectangleShape2D_3aqj5")

[node name="coinTimer" type="Timer" parent="."]
wait_time = 0.009999999999999998
one_shot = true
autostart = true

[connection signal="body_entered" from="safezone" to="." method="_on_safezone_body_entered"]
[connection signal="body_exited" from="safezone" to="." method="_on_safezone_body_exited"]
[connection signal="timeout" from="coinTimer" to="." method="_on_coin_timer_timeout"]
